// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propsToStyle() when receives an argument with breakpoints renders only one breakpoints 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
]
`;

exports[`propsToStyle() when receives an argument with breakpoints renders two or more breakpoints resolutions 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "768",
    "px){",
    "text-align: rigth;",
    "}",
  ],
]
`;
